--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -1,3 +1,5 @@
+<img class="for_info_only half" src="{{MEDIA}}title.png" style="float:left; max-height: 400px; margin-right: 10px" />
+
 <div class="story for_info_only">
 ...стычки между отдельными воинами происходили там и тут, новые войска все прибывали. Постепенно конфликт начинал все больше походить на маленькую войну.<br>
 - "Рыцари, слушай мою команду! Взять щиты! Укрепить латы! Мы терпим слишком большие потери" - крикнул сэр Рональд.<br>
