--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,6 +1,9 @@
 
-<img class="for_info_only half" src="{{MEDIA}}title.png" style="float:left; max-height: 400px; margin-right: 10px" />
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
 
+Screen Recording 2023 08 07 at 13 30 40
+
+https://youtu.be/hSlffi7fMO8
 <div class="story for_info_only">
 ...the clashes between different soldiers occurred here and there, and the new troops kept coming. The conflict gradually was starting to look more like a small war. <br>
 "Knights, hear my command! Take your shields! Strengthen the armor! We are taking too much beating," - Sir Ronald shouted. <br>
