--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -1,5 +1,8 @@
-<img class="for_info_only half" src="{{MEDIA}}title.png" style="float:left; max-height: 400px; margin-right: 10px" />
+<img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
 
+Screen Recording 2023 08 07 at 13 30 40
+
+https://youtu.be/hSlffi7fMO8
 <div class="story for_info_only">
 ...стычки между отдельными воинами происходили там и тут, новые войска все прибывали. Постепенно конфликт начинал все больше походить на маленькую войну.<br>
 - "Рыцари, слушай мою команду! Взять щиты! Укрепить латы! Мы терпим слишком большие потери" - крикнул сэр Рональд.<br>
