--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,9 +1,6 @@
 
 <img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
 
-Screen Recording 2023 08 07 at 13 30 40
-
-https://youtu.be/hSlffi7fMO8
 <div class="story for_info_only">
 ...the clashes between different soldiers occurred here and there, and the new troops kept coming. The conflict gradually was starting to look more like a small war. <br>
 "Knights, hear my command! Take your shields! Strengthen the armor! We are taking too much beating," - Sir Ronald shouted. <br>
@@ -37,16 +34,16 @@ mike = Knight()
 rog = Warrior()
 lancelot = Defender()
 
-fight(chuck, bruce) == True
-fight(dave, carl) == False
-chuck.is_alive == True
-bruce.is_alive == False
-carl.is_alive == True
-dave.is_alive == False
-fight(carl, mark) == False
-carl.is_alive == False
-fight(bob, mike) == False
-fight(lancelot, rog) == True
+assert fight(chuck, bruce) == True
+assert fight(dave, carl) == False
+assert chuck.is_alive == True
+assert bruce.is_alive == False
+assert carl.is_alive == True
+assert dave.is_alive == False
+assert fight(carl, mark) == False
+assert carl.is_alive == False
+assert fight(bob, mike) == False
+assert fight(lancelot, rog) == True
 
 my_army = Army()
 my_army.add_units(Defender, 1)
@@ -63,8 +60,8 @@ army_4.add_units(Warrior, 2)
 
 battle = Battle()
 
-battle.fight(my_army, enemy_army) == False
-battle.fight(army_3, army_4) == True
+assert battle.fight(my_army, enemy_army) == False
+assert battle.fight(army_3, army_4) == True
 </pre>
 </p>
 </div>
