--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -1,8 +1,5 @@
 <img src="{{MEDIA_CONVERT}}title.png" class="title_img" />
 
-Screen Recording 2023 08 07 at 13 30 40
-
-https://youtu.be/hSlffi7fMO8
 <div class="story for_info_only">
 ...стычки между отдельными воинами происходили там и тут, новые войска все прибывали. Постепенно конфликт начинал все больше походить на маленькую войну.<br>
 - "Рыцари, слушай мою команду! Взять щиты! Укрепить латы! Мы терпим слишком большие потери" - крикнул сэр Рональд.<br>
@@ -36,16 +33,16 @@ mike = Knight()
 rog = Warrior()
 lancelot = Defender()
 
-fight(chuck, bruce) == True
-fight(dave, carl) == False
-chuck.is_alive == True
-bruce.is_alive == False
-carl.is_alive == True
-dave.is_alive == False
-fight(carl, mark) == False
-carl.is_alive == False
-fight(bob, mike) == False
-fight(lancelot, rog) == True
+assert fight(chuck, bruce) == True
+assert fight(dave, carl) == False
+assert chuck.is_alive == True
+assert bruce.is_alive == False
+assert carl.is_alive == True
+assert dave.is_alive == False
+assert fight(carl, mark) == False
+assert carl.is_alive == False
+assert fight(bob, mike) == False
+assert fight(lancelot, rog) == True
 
 my_army = Army()
 my_army.add_units(Defender, 1)
@@ -62,8 +59,8 @@ army_4.add_units(Warrior, 2)
 
 battle = Battle()
 
-battle.fight(my_army, enemy_army) == False
-battle.fight(army_3, army_4) == True
+assert battle.fight(my_army, enemy_army) == False
+assert battle.fight(army_3, army_4) == True
 </pre>
 </p>
 </div>
